contrast fix for section header

--- a/src/App.scss
+++ b/src/App.scss
@@ -446,3 +446,7 @@ footer a:focus {
 .Nav-Item a{
 	color: white;
 }
+
+.section-title span {
+	color: white;
+}
